<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PianoShelf</string>
    <string name="pianoshelf">PIANOSHELF</string>

    <string name="action_settings">Settings</string>
    <string name="action_title">@string/app_name</string>
    <string name="search_hint">Inspired Today?</string>

    <string name="sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a nunc scelerisque, posuere arcu id, consequat arcu. Nam ut rutrum odio, non vulputate sem. Curabitur viverra nunc vitae massa finibus egestas. Cras tristique tincidunt est sit amet semper. Donec sagittis neque ut blandit aliquam. Cras sit amet purus ac mi lobortis pharetra vitae in augue. Ut vestibulum consectetur malesuada. Quisque non risus blandit, pretium nunc cursus, tristique elit. Fusce et consectetur enim. Donec at est eu est hendrerit varius fermentum tempus velit. In non lacus lectus.</string>

    <string name="search_title">Search</string>
    <string name="cancel">Cancel</string>
    <string name="more">More</string>
    <string name="edit">Edit</string>

    <!-- Authentication Input Fields -->
    <string name="input_username">Username</string>
    <string name="input_password">Password</string>
    <string name="input_password_repeat">Password x2</string>
    <string name="input_email">Email</string>

    <!-- Authentication Other -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="signup_title">Sign Up</string>
    <string name="profile">Profile</string>
    <string name="profile_avatar_description">User Profile Avatar</string>
    <string name="logout">Logout</string>
    <string name="logging_in">Logging In</string>
    <string name="logging_out">Logging Out</string>

    <!-- Authentication messages -->
    <string name="input_username_missing">Please enter an username.</string>
    <string name="input_password_missing">Please enter a password.</string>
    <string name="input_password_repeat_missing">Please repeat your password.</string>
    <string name="input_password_mismatch">Passwords entered do not match.</string>
    <string name="input_email_invalid">Invalid email address.</string>
    <string name="input_login_failure">Login failed. Please verify your username and password.</string>
    <string name="add_sheet_shelf_success">Added to myShelf.</string>
    <string name="remove_sheet_shelf_success">Removed sheet from myShelf.</string>
    <string name="registration_success">Registration Success!</string>

    <!-- Overflow -->
    <string name="download">Download</string>
    <string name="overflow">Additional Actions</string>
    <string name="overflow_pdf_download">Download PDF</string>
    <string name="overflow_add_to_shelf">Add to MyShelf</string>

    <!-- Drawer -->
    <string name="home">Home</string>
    <string name="myshelf">MyShelf</string>
    <string name="downloads">Downloads</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="drawer_title"> </string>
    <string-array name="drawer_text">
        <item>@string/home</item>
        <item>@string/myshelf</item>
        <item>@string/downloads</item>
    </string-array>


    <!-- Sheet list strings -->
    <string name="sheet_music_tab_name">SheetMusic</string>
    <string name="composer_tab_name">Composers</string>

    <string name="profile_shelf">Shelf</string>


    <string name="media_submitted_by">Submitted by</string>
    <string name="media_rating">Your rating</string>
</resources>
