<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/sheet_download"
        android:icon="@drawable/ic_action_download"
        android:title="@string/download"
        app:showAsAction="ifRoom"
        android:onClick="invokeDownload"/>

    <item android:id="@+id/sheet_overflow"
        android:icon="@drawable/ic_menu_moreoverflow_normal_holo_light"
        android:title="@string/overflow"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sheet_pdf_download"
                android:title="@string/overflow_pdf_download"
                android:onClick="invokePDFDownload" />
            <item
                android:id="@+id/sheet_add_to_shelf"
                android:title="@string/overflow_add_to_shelf"
                android:onClick="invokeAddToShelf" />
        </menu>
    </item>
</menu>