<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin" >
    <EditText
        android:id="@+id/signupview_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_username"
        android:text="hello4"/>
    <EditText
        android:id="@+id/signupview_password_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:text="aaaaaa"/>
    <EditText
        android:id="@+id/signupview_password_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password_repeat"
        android:inputType="textPassword"
        android:text="aaaaaa"/>
    <EditText
        android:id="@+id/signupview_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        android:text="a@a.com"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ProgressBar
            android:id="@+id/signupview_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:indeterminate="true"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/signupview_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/signupview_progress"
            android:textColor="@color/error"/>
        <TextView
            android:id="@+id/signupview_warning_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/signupview_progress"
            android:layout_below="@id/signupview_error_message"
            android:textColor="@color/warning"/>
    </RelativeLayout>
    <Button
        android:id="@+id/signupview_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:onClick="invokeRegistration"/>

</LinearLayout>